--- a/Source/index.html
+++ b/Source/index.html
@@ -5,6 +5,36 @@
     <title>Gllacy</title>
   </head>
   <body>
-    
+    <header class="page-header">
+      <a class="page-header__logo">
+        <img class="page-header__logo-image" src="img/logo.png" width="154" height="64" alt="Магазин «Глэйси»">
+      </a>
+      <nav class="main-nav">
+        <ul class="main-nav__list site-list">
+          <li class="site-list__item">
+            <a href="photo.html">Каталог</a>
+          </li>
+          <li class="site-list__item">
+            <a href="form.html">Доставка и оплата</a>
+          </li>
+          <li class="site-list__item">
+            <a href="#">О компании</a>
+          </li>
+        </ul>
+        <form class="main-nav__search" action="https://echo.htmlacademy.ru" method="get">
+          <input name="s" placeholder="Поиск:" type="search">
+          <button class="main-nav__search-button" type="submit">Поиск</button>
+        </form>
+        <ul class="main-nav__list user-list">
+          <li class="user-list__item">
+            <a class="user-list__login" href="login.html">Войти</a>
+          </li>
+          <li class="user-list__item">
+            <a class="user-list__cart" href="#">Пусто</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+
   </body>
  </html>
