Разметил слайдер и баннеры

--- a/Source/index.html
+++ b/Source/index.html
@@ -5,36 +5,77 @@
     <title>Gllacy</title>
   </head>
   <body>
-    <header class="page-header">
-      <a class="page-header__logo">
-        <img class="page-header__logo-image" src="img/logo.png" width="154" height="64" alt="Магазин «Глэйси»">
-      </a>
-      <nav class="main-nav">
-        <ul class="main-nav__list site-list">
-          <li class="site-list__item">
-            <a href="photo.html">Каталог</a>
-          </li>
-          <li class="site-list__item">
-            <a href="form.html">Доставка и оплата</a>
-          </li>
-          <li class="site-list__item">
-            <a href="#">О компании</a>
-          </li>
-        </ul>
-        <form class="main-nav__search" action="https://echo.htmlacademy.ru" method="get">
-          <input name="s" placeholder="Поиск:" type="search">
-          <button class="main-nav__search-button" type="submit">Поиск</button>
-        </form>
-        <ul class="main-nav__list user-list">
-          <li class="user-list__item">
-            <a class="user-list__login" href="login.html">Войти</a>
-          </li>
-          <li class="user-list__item">
-            <a class="user-list__cart" href="#">Пусто</a>
-          </li>
-        </ul>
-      </nav>
-    </header>
+    <div class="site-wrapper">
+      <header class="page-header">
+        <a class="page-header__logo">
+          <img class="page-header__logo-image" src="img/logo.png" width="154" height="64" alt="Магазин «Глэйси»">
+        </a>
+        <nav class="main-nav">
+          <ul class="main-nav__list site-list">
+            <li class="site-list__item">
+              <a href="photo.html">Каталог</a>
+            </li>
+            <li class="site-list__item">
+              <a href="form.html">Доставка и оплата</a>
+            </li>
+            <li class="site-list__item">
+              <a href="#">О компании</a>
+            </li>
+          </ul>
+          <form class="main-nav__search" action="https://echo.htmlacademy.ru" method="get">
+            <input name="s" placeholder="Поиск:" type="search">
+            <button class="main-nav__search-button" type="submit">Поиск</button>
+          </form>
+          <ul class="main-nav__list user-list">
+            <li class="user-list__item">
+              <a class="user-list__login" href="login.html">Войти</a>
+            </li>
+            <li class="user-list__item">
+              <a class="user-list__cart" href="#">Пусто</a>
+            </li>
+          </ul>
+        </nav>
+        <p class="page-header__shedule">С 10 до 20 ежедневно</p>
+        <p class="page-header__phone">8 812 450-25-25</p>
+      </header>
+      <main>
+        <h1 class="visually-hidden">Магазин Глэйси</h1>
 
+        <ul class="slider">
+          <li class="slider__item">
+            <h2 class="slider__title">Крем-брюле и пломбир с малиновым джемом</h2>
+            <a class="slider__button button" href="#">Давайте оба!</a>
+          </li>
+          <li class="slider__item">
+            <h2 class="slider__title">Шоколадный пломбир и лимонный сорбет</h2>
+            <a class="slider__button button" href="#">Давайте оба!</a>
+          </li>
+          <li class="slider__item">
+            <h2 class="slider__title">Пломбир с помадкой и клубничный щербет</h2>
+            <a class="slider__button button" href="#">Давайте оба!</a>
+          </li>
+        </ul>
+        <ul class="slider__toggles">
+          <li class="slider__toggle slider__toggle--1"></li>
+          <li class="slider__toggle slider__toggle--2"></li>
+          <li class="slider__toggle slider__toggle--3"></li>
+        </ul>
+
+        <ul class="banners">
+          <li class="banners__item banners__item--1">
+            <h2 class="banners__title">Малинка даром!</h2>
+            <p class="banners__description">При покупке 2кг любого фруктового мороженого, добавим
+            в ваш заказ банку малинового варенья бесплатно.</p>
+            <a class="banners__button button" href="#">Хочу варенье!</a>
+          </li>
+          <li class="banners__item banners__item--2">
+            <h2 class="banners__title">Шоколадки даром!</h2>
+            <p class="banners__description">При покупке 2кг пломбира, добавим в ваш заказ упаковку
+            вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
+            <a class="banners__button button" href="#">Хочу шоколадки!</a>
+          </li>
+        </ul>
+      </main>
+    </div>
   </body>
  </html>
