Разметил основную часть

--- a/Source/index.html
+++ b/Source/index.html
@@ -13,10 +13,10 @@
         <nav class="main-nav">
           <ul class="main-nav__list site-list">
             <li class="site-list__item">
-              <a href="photo.html">Каталог</a>
+              <a href="#">Каталог</a>
             </li>
             <li class="site-list__item">
-              <a href="form.html">Доставка и оплата</a>
+              <a href="#">Доставка и оплата</a>
             </li>
             <li class="site-list__item">
               <a href="#">О компании</a>
@@ -41,40 +41,123 @@
       <main>
         <h1 class="visually-hidden">Магазин Глэйси</h1>
 
-        <ul class="slider">
-          <li class="slider__item">
-            <h2 class="slider__title">Крем-брюле и пломбир с малиновым джемом</h2>
-            <a class="slider__button button" href="#">Давайте оба!</a>
-          </li>
-          <li class="slider__item">
-            <h2 class="slider__title">Шоколадный пломбир и лимонный сорбет</h2>
-            <a class="slider__button button" href="#">Давайте оба!</a>
-          </li>
-          <li class="slider__item">
-            <h2 class="slider__title">Пломбир с помадкой и клубничный щербет</h2>
-            <a class="slider__button button" href="#">Давайте оба!</a>
-          </li>
-        </ul>
-        <ul class="slider__toggles">
-          <li class="slider__toggle slider__toggle--1"></li>
-          <li class="slider__toggle slider__toggle--2"></li>
-          <li class="slider__toggle slider__toggle--3"></li>
-        </ul>
+        <section class="slider">
+          <h2 class="visually-hidden">Слайдер</h2>
+          <ul class="slider__list">
+            <li class="slider__item">
+              <h3 class="slider__title">Крем-брюле и пломбир с малиновым джемом</h2>
+              <a class="slider__button button" href="#">Давайте оба!</a>
+            </li>
+            <li class="slider__item">
+              <h3 class="slider__title">Шоколадный пломбир и лимонный сорбет</h2>
+              <a class="slider__button button" href="#">Давайте оба!</a>
+            </li>
+            <li class="slider__item">
+              <h3 class="slider__title">Пломбир с помадкой и клубничный щербет</h2>
+              <a class="slider__button button" href="#">Давайте оба!</a>
+            </li>
+          </ul>
+          <ul class="slider__toggles">
+            <li class="slider__toggle slider__toggle--1"></li>
+            <li class="slider__toggle slider__toggle--2"></li>
+            <li class="slider__toggle slider__toggle--3"></li>
+          </ul>
+        </section>
 
-        <ul class="banners">
-          <li class="banners__item banners__item--1">
-            <h2 class="banners__title">Малинка даром!</h2>
-            <p class="banners__description">При покупке 2кг любого фруктового мороженого, добавим
-            в ваш заказ банку малинового варенья бесплатно.</p>
-            <a class="banners__button button" href="#">Хочу варенье!</a>
-          </li>
-          <li class="banners__item banners__item--2">
-            <h2 class="banners__title">Шоколадки даром!</h2>
-            <p class="banners__description">При покупке 2кг пломбира, добавим в ваш заказ упаковку
-            вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
-            <a class="banners__button button" href="#">Хочу шоколадки!</a>
-          </li>
-        </ul>
+        <section class="banners">
+          <h2 class="visually-hidden">Баннеры</h2>
+          <ul class="banners__list">
+            <li class="banners__item banners__item--1">
+              <h3 class="banners__title">Малинка даром!</h2>
+              <p class="banners__description">При покупке 2кг любого фруктового мороженого, добавим
+              в ваш заказ банку малинового варенья бесплатно.</p>
+              <a class="banners__button button" href="#">Хочу варенье!</a>
+            </li>
+            <li class="banners__item banners__item--2">
+              <h3 class="banners__title">Шоколадки даром!</h2>
+              <p class="banners__description">При покупке 2кг пломбира, добавим в ваш заказ упаковку
+              вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
+              <a class="banners__button button" href="#">Хочу шоколадки!</a>
+            </li>
+          </ul>
+        </section>
+
+        <section class="hits">
+          <h2 class="visually-hidden">Хиты</h2>
+          <ul class="hits__list">
+            <li class="hits__item">
+              <a href="#"><img width="267" height="267" src="img/Hit1.png"></a>
+              <h3 class="hits__title">Сливочное с апельсиновым джемом и цитрусовой стружкой</h3>
+              <p class="hits__price">310 &#8381/кг</p>
+            </li>
+            <li class="hits__item">
+              <a href="#"><img width="267" height="267" src="img/Hit2.png"></a>
+              <h3 class="hits__title">Сливочно-кофейное с кусочками шоколада</h3>
+              <p class="hits__price">380 &#8381/кг</p>
+            </li>
+            <li class="hits__item">
+              <a href="#"><img width="267" height="267" src="img/Hit3.png"></a>
+              <h3 class="hits__title">Сливочно-клубничное с присыпкой из белого шоколада</h3>
+              <p class="hits__price">355 &#8381/кг</p>
+            </li>
+            <li class="hits__item">
+              <a href="#"><img width="267" height="267" src="img/Hit4.png"></a>
+              <h3 class="hits__title">Сливочное крем-брюле с карамельной подливкой</h3>
+              <p class="hits__price">415 &#8381/кг</p>
+            </li>
+          </ul>
+        </section>
+
+        <section class="features">
+          <h2 class="features__title">Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес</h2>
+          <ul class="features__list">
+            <li class="features__item">
+              <p class="features__text">Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</p>
+            </li>
+            <li class="features__item">
+              <p class="features__text">Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.</p>
+            </li>
+            <li class="features__item">
+              <p class="features__text">Закупка ингредиентов  производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
+            </li>
+            <li class="features__item">
+              <p class="features__text">Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</p>
+            </li>
+          </ul>
+        </section>
+
+        <div class="raw-wrapper">
+          <section class="news">
+            <h2 class="news__title">Новое в нашем блоге</h2>
+            <p class="news__text">10 способов сервировки фруктовых щербетов к столу</p>
+          </section>
+
+          <section class="mailing">
+            <h2 class="visually-hidden">Рассылка</h2>
+            <p class="mailing__text">Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
+            <form class="mailing__form" action="https://echo.htmlacademy.ru" method="post">
+              <input type="email" placeholder="Электронная почта">
+              <button class="button mailing__button" type="submit">Отправить</button>
+            </form>
+          </section>
+        </div>
+
+        <section class="map"></section>
+
+        <section class="feedback">
+          <ul class="feedback__list">
+            <li>
+              <h2 class="feedback__title">Адрес главного офиса и оффлайн магазина:</h2>
+              <p class="feedback__text">ул. Большая Конюшенная 19/8, Санкт-Петербург</p>
+            </li>
+            <li>
+              <h2 class="feedback__title">Для заказов по телефону:</h2>
+              <p class="feedback__text">8 812 450-25-25</p>
+              <p class="feedback__description">(с 10 до 20 ежедневно)</p>
+            </li>
+          </ul>
+          <button class="button feedback__button" type="button">Форма обратной связи</button>
+        </section>
       </main>
     </div>
   </body>
