--- a/Source/index.html
+++ b/Source/index.html
@@ -3,14 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title>Gllacy</title>
+    <link href="css/style.css" rel="stylesheet">
   </head>
-  <body>
+  <body class="background-1">
     <div class="site-wrapper">
       <header class="page-header">
-        <a class="page-header__logo">
-          <img class="page-header__logo-image" src="img/logo.png" width="154" height="64" alt="Магазин «Глэйси»">
-        </a>
         <nav class="main-nav">
+          <a class="page-header__logo">
+            <img class="page-header__logo-image" src="img/logo.png" width="154" height="64" alt="Магазин «Глэйси»">
+          </a>
           <ul class="main-nav__list site-list">
             <li class="site-list__item">
               <a href="#">Каталог</a>
