--- a/Source/index.html
+++ b/Source/index.html
@@ -152,15 +152,16 @@
         </div>
       </div>
       <section class="feedback">
+        <h2 class="visually-hidden">Как с нами связаться</h2>
         <div class="feedback__wrapper">
           <div class="feedback__container">
             <ul class="feedback__list">
               <li>
-                <h2 class="feedback__title feedback__title--short">Адрес главного офиса и оффлайн магазина:</h2>
+                <h3 class="feedback__title feedback__title--short">Адрес главного офиса и оффлайн магазина:</h2>
                 <p class="feedback__text">ул. Большая Конюшенная 19/8, Санкт-Петербург</p>
               </li>
               <li>
-                <h2 class="feedback__title">Для заказов по телефону:</h2>
+                <h3 class="feedback__title">Для заказов по телефону:</h2>
                 <p class="feedback__text">8 812 450-25-25</p>
                 <p class="feedback__description">(с 10 до 20 ежедневно)</p>
               </li>
@@ -173,19 +174,44 @@
     <footer class="page-footer">
       <div class="site-wrapper raw-wrapper">
         <section class="social">
+          <h2 class="visually-hidden">Мы в соцсетях</h2>
           <ul class="social__list">
-            <li class="social__item"><a href="#">
-              <svg xmlns="http://www.w3.org/2000/svg"
-               xmlns:xlink="http://www.w3.org/1999/xlink"
-               width="38px" height="38px">
-              <path fill-rule="evenodd"  opacity="0.502" fill="rgb(255, 255, 255)"
-               d="M18.925,0.237 C29.209,0.237 37.545,8.573 37.545,18.857 C37.545,29.140 29.209,37.476 18.925,37.476 C8.642,37.476 0.306,29.140 0.306,18.857 C0.306,8.573 8.642,0.237 18.925,0.237 ZM18.865,3.228 C27.531,3.228 34.556,10.253 34.556,18.919 C34.556,27.586 27.531,34.611 18.865,34.611 C10.199,34.611 3.173,27.586 3.173,18.919 C3.173,10.253 10.199,3.228 18.865,3.228 Z"/>
-              </svg>
-            </a></li>
+            <li class="social__item">
+              <a href="#"><img src="img/twitter.png" width="38" height="38" alt="Твиттер"></a>
+            </li>
+            <li class="social__item">
+              <a href="#"><img src="img/instagram.png" width="38" height="38" alt="Инстаграм"></a>
+            </li>
+            <li class="social__item">
+              <a href="#"><img src="img/fb.png" width="38" height="38" alt="Фейсбук"></a>
+            </li>
+            <li class="social__item">
+              <a href="#"><img src="img/vk.png" width="38" height="38" alt="ВКонтакте"></a>
+            </li>
           </ul>
         </section>
-        <section class="about-us"></section>
-        <section class="development"></section>
+        <section class="footer-nav">
+          <h2 class="visually-hidden"></h2>
+          <ul class="footer-nav__list">
+            <li class="footer-nav__item footer-nav__item--like">
+              <a href="#">Для поставщиков</a>
+            </li>
+            <li class="footer-nav__item">
+              <a href="#">Наши документы</a>
+            </li>
+            <li class="footer-nav__item">
+              <a href="#">О производстве</a>
+            </li>
+            <li class="footer-nav__item">
+              <a href="#">Экологические стандарты</a>
+            </li>
+          </ul>
+        </section>
+        <section class="development">
+          <h2 class="visually-hidden">Разработано</h2>
+          <a class="development__logo" href="#"><img src="img/academy-logo.png"></a>
+          <p class="development__text">Сделано в HTMLAcademy &copy; 2017</p>
+        </section>
       </div>
     </footer>
   </body>
