--- a/Source/index.html
+++ b/Source/index.html
@@ -13,15 +13,24 @@
             <a class="page-header__logo">
               <img class="page-header__logo-image" src="img/logo.png" width="154" height="64" alt="Магазин «Глэйси»">
             </a>
-            <ul class="page-header__list site-list">
-              <li class="site-list__item">
-                <a href="#">Каталог</a>
+            <ul class="page-header__list">
+              <li class="page-header__item--sub-menu">
+                <a class="page-header__item" href="#">Каталог</a>
+                <div class="page-header__sub-menu sub-menu">
+                  <h2 class="sub-menu__title">Новинки</h2>
+                  <ul class="sub-menu__list">
+                    <li><a class="sub-menu__item" href="#">Сливочное</a></li>
+                    <li><a class="sub-menu__item" href="#">Щербеты</a></li>
+                    <li><a class="sub-menu__item" href="#">Фруктовый лед</a></li>
+                    <li><a class="sub-menu__item" href="#">Мелорин</a></li>
+                  </ul>
+                </div>
               </li>
-              <li class="site-list__item">
-                <a href="#">Доставка и оплата</a>
+              <li>
+                <a class="page-header__item" href="#">Доставка и оплата</a>
               </li>
-              <li class="site-list__item">
-                <a href="#">О компании</a>
+              <li>
+                <a class="page-header__item" href="#">О Компании</a>
               </li>
             </ul>
           </div>
@@ -30,12 +39,12 @@
               <input name="s" placeholder="Поиск:" type="search">
               <button class="page-header__search-button" type="submit">Поиск</button>
             </form>
-            <ul class="page-header__list user-list">
-              <li class="user-list__item">
-                <a class="user-list__login" href="login.html">Войти</a>
+            <ul class="page-header__list page-header__list--user">
+              <li>
+                <a class="page-header__item page-header__item--login" href="login.html">Вход</a>
               </li>
-              <li class="user-list__item">
-                <a class="user-list__cart" href="#">Пусто</a>
+              <li>
+                <a class="page-header__item page-header__item--cart" href="#">Пусто</a>
               </li>
             </ul>
           </div>
