--- a/Source/index.html
+++ b/Source/index.html
@@ -15,7 +15,7 @@
             </a>
             <ul class="page-header__list">
               <li class="page-header__item--sub-menu">
-                <a class="page-header__item" href="#">Каталог</a>
+                <a class="page-header__item" href="catalog.html">Каталог</a>
                 <div class="page-header__sub-menu sub-menu">
                   <h2 class="sub-menu__title">Новинки</h2>
                   <ul class="sub-menu__list">
@@ -103,25 +103,25 @@
         <section class="hits">
           <h2 class="visually-hidden">Хиты</h2>
           <ul class="hits__list">
-            <li class="hits__item">
-              <a href="#"><img width="267" height="267" src="img/Hit1.png"></a>
-              <h3 class="hits__title">Сливочное с апельсиновым джемом и цитрусовой стружкой</h3>
-              <p class="hits__price">310 &#8381<span class="hits__price--small">/кг</span></p>
+            <li class="hits__item card card--hit">
+              <a href="#"><img width="267" height="267" src="img/orange.png"></a>
+              <h3 class="card__title">Сливочное с апельсиновым джемом и цитрусовой стружкой</h3>
+              <p class="card__price">310 &#8381<span class="hits__price--small">/кг</span></p>
             </li>
-            <li class="hits__item">
-              <a href="#"><img width="267" height="267" src="img/Hit2.png"></a>
-              <h3 class="hits__title">Сливочно-кофейное с кусочками шоколада</h3>
-              <p class="hits__price">380 &#8381<span class="hits__price--small">/кг</span></p>
+            <li class="hits__item card card--hit">
+              <a href="#"><img width="267" height="267" src="img/coffee.png"></a>
+              <h3 class="card__title">Сливочно-кофейное с кусочками шоколада</h3>
+              <p class="card__price">380 &#8381<span class="hits__price--small">/кг</span></p>
             </li>
-            <li class="hits__item">
-              <a href="#"><img width="267" height="267" src="img/Hit3.png"></a>
-              <h3 class="hits__title">Сливочно-клубничное с присыпкой из белого шоколада</h3>
-              <p class="hits__price">355 &#8381<span class="hits__price--small">/кг</span></p>
+            <li class="hits__item card card--hit">
+              <a href="#"><img width="267" height="267" src="img/strawberry.png"></a>
+              <h3 class="card__title">Сливочно-клубничное с присыпкой из белого шоколада</h3>
+              <p class="card__price">355 &#8381<span class="hits__price--small">/кг</span></p>
             </li>
-            <li class="hits__item">
-              <a href="#"><img width="267" height="267" src="img/Hit4.png"></a>
-              <h3 class="hits__title">Сливочное крем-брюле с карамельной подливкой</h3>
-              <p class="hits__price">415 &#8381<span class="hits__price--small">/кг</span></p>
+            <li class="hits__item card card--hit">
+              <a href="#"><img width="267" height="267" src="img/caramel.png"></a>
+              <h3 class="card__title">Сливочное крем-брюле с карамельной подливкой</h3>
+              <p class="card__price">415 &#8381<span class="hits__price--small">/кг</span></p>
             </li>
           </ul>
         </section>
